# Load_cycle_analyzer

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml  run_app.bat
battery_aging_app/: __init__.py  __main__.py  app.py  models.py  session.py
battery_aging_app/analysis/: __init__.py  cleaning.py  integration.py  metrics.py  sections.py  units.py
battery_aging_app/exports/: __init__.py  csv_export.py  report.py
battery_aging_app/importers/: __init__.py  csv_import.py  presets.py
battery_aging_app/plotting/: __init__.py  sync.py
battery_aging_app/ui/: __init__.py  dialogs.py  import_dialog.py  main_window.py  plot_widget.py  table_model.py
packaging/: battery_aging_analyzer.spec
sample_data/: battery_cycle_basic.csv  battery_cycle_semicolon_decimal_comma.csv
src/battery_cycle_analyzer/: __init__.py  app.py  main.py
src/battery_cycle_analyzer/core/: __init__.py  analysis.py  column_mapping.py  comparison.py  csv_loader.py  data_model.py  derived_metrics.py  export.py  filtering.py  import_config.py  logging_config.py  project_state.py  report.py  sections.py  tasks.py  units.py  validation.py
src/battery_cycle_analyzer/plotting/: __init__.py  cursor_controller.py  cursor_math.py  divider_controller.py  plot_controller.py  section_overlay.py
src/battery_cycle_analyzer/tests/: __init__.py  test_analysis.py  test_csv_loader.py  test_cursor_math.py  test_derived_metrics.py  test_export.py  test_project_state.py  test_sections.py  test_table_panel.py  test_tasks.py  test_units.py
src/battery_cycle_analyzer/ui/: __init__.py  advanced_analysis_panel.py  dialogs.py  import_wizard.py  main_window.py  plot_panel.py  results_panel.py  table_panel.py  workers.py
tests/: test_csv_import.py  test_sections_integration_export.py  test_sync_metrics_session.py  test_units.py
(+5 files in other folders)
