[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "battery-aging-load-cycle-analyzer"
version = "0.1.0"
description = "Desktop scientific application for battery aging load-cycle CSV analysis."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Battery Aging Analyzer Contributors" }]
dependencies = [
    "PyQt6>=6.6",
    "pyqtgraph>=0.13.7",
    "pandas>=2.1",
    "numpy>=1.26",
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pyinstaller>=6",
]

[project.scripts]
battery-aging-analyzer = "battery_aging_app.__main__:main"

[tool.setuptools.packages.find]
include = ["battery_aging_app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
