[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "battery-aging-load-cycle-analyzer"
version = "0.1.0"
description = "Desktop scientific application for battery aging load-cycle CSV analysis."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Battery Aging Analyzer Contributors" }]
dependencies = [
    "PyQt6>=6.6",
    "pyqtgraph>=0.13.7",
    "pandas>=2.1",
    "numpy>=1.26",
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pyinstaller>=6",
]

[project.scripts]
battery-aging-analyzer = "battery_cycle_analyzer.main:main"
battery-cycle-analyzer = "battery_cycle_analyzer.main:main"

[tool.setuptools.packages.find]
where = [".", "src"]
include = ["battery_aging_app*", "battery_cycle_analyzer*"]

[tool.pytest.ini_options]
testpaths = ["tests", "src/battery_cycle_analyzer/tests"]
pythonpath = ["src"]
addopts = "-q"
